[package]
name = "pos-auth"
version = "0.1.0"
authors = [ "KK Lam" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "pos_auth"

[dependencies]
async-trait = "0.1"
futures = "0.3"
once_cell = "1.8"
serde_bytes = "0.11.9"
serde = {version = "1.0.160", features = ["derive"]}
wasmbus-rpc = "0.13"
wasmcloud-interface-sqldb = "0.9"
wasmcloud-interface-logging = "0.9"

pos-interface = { path = "../pos-interface/rust"}

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"

strip = true